clean up style sheet. Replace massive list of elements for font styling with *. Add font-family to price on the menu page.

--- a/style.css
+++ b/style.css
@@ -324,7 +324,6 @@ BACK BUTTON, FLEX-NAV, MAIN CONTENT, AND SITE ADS*/
 .itemDescription {
 	display: flex;
 	font-weight: 100;
-	font-family: cursive;
 	font-size: 1.2em;
 	margin: 1em 0;
 }
@@ -339,6 +338,8 @@ BACK BUTTON, FLEX-NAV, MAIN CONTENT, AND SITE ADS*/
 	text-align: center;
 	flex: 1;
 	margin: 0;
+	font-size: 0.75em;
+	font-weight: 100;
 }
 
 .itemDescription li {
@@ -352,23 +353,7 @@ BACK BUTTON, FLEX-NAV, MAIN CONTENT, AND SITE ADS*/
 
 /* FONT HANDLING */
 
-h1,
-h2,
-h3,
-.flex-nav li,
-#reservation-button,
-.button, 
-figcaption,
-.signup,
-input,
-textarea,  
-a,
-p,
-li,
-sup,
-.vcard,
-.error,
-#receipt {
+* {
 	font-family: 'Gloria Hallelujah', Comic Sans MS;
 }
 
@@ -648,8 +633,8 @@ footer {
 	padding: 5px 60px;
 	position: relative;
   	bottom: 0;
-  	left: calc(50% - 11.5em);
-  	background-color: #BDFFF9;
+  	left: calc(50% - 147px);
+  	/*background-color: #BDFFF9;*/
   	text-align: center;
   	width: fit-content;
     border-radius: 5px;
@@ -848,7 +833,6 @@ footer p {
 		flex: 1 1 90vw;
 		justify-content: center;
 		text-decoration: none;
-		font-family: 'Gloria Hallelujah', cursive;
 		font-size: 1.4em;
 		color: black;
 	}
